welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: value couleur is not a member of object java.awt.Color
  	if (getCouleurSol() == Color.couleur) {
                                     ^